--- a/_config.yml
+++ b/_config.yml
@@ -6,19 +6,15 @@ url: https://jaychonuo.github.io/
 
 # Owner/author information
 owner:
-  name: Hanlin Cai
-  avatar: hanlin.jpg
+  name: Jiayong ZHOU
+  avatar: 1.jpg
  # bio:
-  email: hanlin.cai@ieee.org
-  cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
+  email: jzhou240@connect.hkust-gz.edu.cn
+  cv: https://Jaychonuo.github.io/file/CV-Jiayong ZHOU.pdf
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
-  twitter: lancecai2002
-  github: GuangLun2000
-  linkedin: hanlincai
-  scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
-  bilibili: 594030035
-  researchgate: https://www.researchgate.net/profile/Hanlin-Cai
-  zhihu: https://www.zhihu.com/people/chlire
+  github: Jaychonuo
+  bilibili: 452018516
+  # zhihu: https://www.zhihu.com/people/chlire
   # facebook: caihanlin2002
   # instagram: lancecai2002
   # lastfm:
