--- a/_config.yml
+++ b/_config.yml
@@ -34,12 +34,12 @@ google_verify: "SkiyuGpJOKT74vv5GmXLvYXXDkXy4v8VWPtbelYz3Hs"
 links:
   - title: About Me
     url: /
-  - title: Research
-    url: /research/
+  #- title: Research
+   # url: /research/
   #- title: Awards
    # url: /awards/
-  - title: Peoples
-    url: /people/
+  #- title: Peoples
+   # url: /people/
   - title: Hobbies
     url: /hobbies/
   #- title: Blogs
